# Backtesting_PD

./: .gitignore  README.md  VERSION_V0.md  VERSION_V1.md  app.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: thresholds.yaml
docs/: demo_script.md  methodology.md  user_guide.md
src/: config_utils.py
src/alerting/: calibration_alerts.py  discrimination_alerts.py  global_status.py  monotonicity_alerts.py  regulatory_alerts.py  stability_alerts.py
src/data_generation/: demo_scenarios.py  generate_pd_observations.py  generate_sample_data.py
src/data_quality/: checks.py  exclusion_analysis.py
src/pd_backtesting/: aggregation.py  calibration.py  data_loader.py  discrimination.py  eligibility.py  interpretability.py  low_default.py  metrics.py  migration.py  monotonicity.py  pd_adjustments.py  philosophy.py  population_shift.py  rds.py  stability.py  stat_tests.py  validation.py
src/reporting/: data_dictionary.py  demo_narrative.py  findings.py  test_mapping.py
tests/: test_calibration.py  test_data_dictionary.py  test_data_generation.py  test_data_quality.py  test_lot2_pd_engine.py  test_lot3_discrimination_stability.py  test_lot5_demo_readiness.py  test_lot6_methodology.py  test_metrics.py  test_regulatory_enrichment.py
