[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pd-backtesting-mvp"
version = "0.1.0"
description = "MVP Streamlit de backtesting reglementaire PD 12 mois"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "plotly>=5.20",
  "streamlit>=1.34",
  "pyyaml>=6.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["src*"]
